# tap-ixc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/rules/: code-style.md  error-handling.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
config/: clients.yml.example
docs/: api-reference.md  changelog.md  cli.md  code-review.md  concepts.md  configuration.md  contributing.md  deployment.md  getting-started.md  incremental-and-validation.md  index.md  monitoring.md  plan.md  python-api.md  schema.sql  streams.md  troubleshooting.md  tutorial.md
examples/: airflow_dag.py
tap_ixc/: __init__.py  __main__.py  catalog.py  cli.py  runner.py  tap.py
tap_ixc/config/: settings.py
tap_ixc/core/: checkpoint.py  contracts.py  events.py  pipeline.py  redact.py  retry.py
tap_ixc/extractors/: api.py  base.py
tap_ixc/loaders/: base.py  postgres.py  staging.py
tap_ixc/streams/: __init__.py  base.py  clientes.py  contratos.py  titulos.py
tests/: test_api_client.py  test_checkpoint.py  test_contracts.py  test_events.py  test_pipeline.py  test_postgres.py  test_redact.py  test_retry.py  test_runner.py  test_settings.py  test_staging.py  test_tap.py
