[project]
name = "tap-ixc"
version = "0.1.0"
description = "Lib Python para sincronizar dados da API IXC Provedor para PostgreSQL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ixc", "ixcsoft", "ixc-provedor", "etl", "postgresql", "data-pipeline", "isp", "provedor-internet", "singer", "duckdb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Internet",
]
dependencies = [
    "httpx>=0.27",
    "stamina>=24.2",
    "pybreaker>=1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "duckdb>=1.0",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
tap-ixc = "tap_ixc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
